--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
     <title>Flight Manager</title>
+    <script src="../public/javascripts/jquery-3.2.0.js"></script>
+    <script src="../public/javascripts/index.js"></script>
 </head>
 <body>
 
 <h1>index template</h1>
+<button onclick="postQuery({test: 'test'})"> click </button>
 
+<div class="resSlot" id="resSlot"></div>
 </body>
 </html>
