--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -6,21 +6,17 @@
     <title>Flight Manager</title>
     <script src="../public/javascripts/jquery-3.2.0.js"></script>
     <script src="../public/javascripts/index.js"></script>
-    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="../public/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="../public/stylesheets/style.css">
 </head>
 <body>
 
 <h1>index template</h1>
 <button class=".Button" id="QButton"> click</button>
 
+<!--QUERY RESULT-->
 <div class="resDiv" id="resDiv">
-    <table class=".table-striped" id="resTable">
-        <tr>
-            <th>Student Number</th>
-            <th>Student Name</th>
-        </tr>
-    </table>
+    <table class="table table-striped" id="resTable"></table>
 </div>
 </body>
 </html>
