enabled user login and registration

--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -10,6 +10,22 @@
     <link rel="stylesheet" href="../public/stylesheets/style.css">
 </head>
 <body>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">FlightManager</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar-right" id="right">
+            </ul>
+        </div>
+    </div>
+</nav>
 <div class="container">
     <div class="jumbotron">
         <h1>Flight Manager</h1>
@@ -33,4 +49,7 @@
 
 
 </body>
+<script>
+
+</script>
 </html>
