--- a/src/rest/views/login.html
+++ b/src/rest/views/login.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Login</title>
     <script src="../public/javascripts/jquery-3.2.0.js"></script>
-    <script src="../public/javascripts/login.js"></script>
+    <!--<script src="../public/javascripts/login.js"></script>-->
     <link rel="stylesheet" href="../public/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="../public/stylesheets/style.css">
     <link rel="stylesheet" href="../public/stylesheets/login.css">
@@ -26,12 +26,60 @@
     </div>
 
     <div class="container" style="background-color:#f1f1f1">
-        <button type="button" class="cancelbtn">Cancel</button>
+        <button type="button" onclick="cancel()" class="cancelbtn">Cancel</button>
     </div>
 </form>
 
 </body>
 <script>
 
+    var isLoggedIn = JSON.parse(window.sessionStorage.getItem('isLoggedIn'));
+    if (isLoggedIn) window.location.href = './';
+    $('#loginForm').submit(function(event) {
+        $('#loginMsg').text('');
+        event.preventDefault();
+        var $form = $('#loginForm'),
+            username = $form.find("input[name='uname']").val(),
+            info = {username: username};
+        $.ajax({
+            type: 'POST',
+            url: './login',
+            data: JSON.stringify(info),
+            contentType: "application/json; charset=utf-8",
+            success: loginHandler
+        })
+    });
+
+    function loginHandler(res) {
+        if (res.body.length === 0) {
+            $('#loginMsg').text("User does NOT exist");
+            return;
+        }
+        var email = $('#loginForm').find("input[name='uname']").val(),
+            password = $('#loginForm').find("input[name='psw']").val();
+        if(res.body[0].password !== password) {
+            $('#loginMsg').text("Password does NOT match");
+            return;
+        }
+        console.log("Password matches!");
+        createSession(email, password);
+        window.location.href = './';
+    }
+
+    function createSession(email, password) {
+        var session = window.sessionStorage;
+        if (typeof(session) !== "undefined") {
+            session.setItem('email', email);
+            session.setItem('password', password);
+            session.setItem('isLoggedIn', true);
+        }
+        else {
+            alert("Session Not Available");
+        }
+    }
+
+    function cancel() {
+        window.location.href = './';
+    }
 </script>
 </html>
