--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -8,6 +8,7 @@
     <script src="../public/javascripts/index.js"></script>
     <link rel="stylesheet" href="../public/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="../public/stylesheets/style.css">
+    <link rel="stylesheet" href="../public/stylesheets/index.css">
 </head>
 <body>
 <nav class="navbar navbar-inverse">
@@ -31,8 +32,31 @@
         <h1>Flight Manager</h1>
     </div>
 
-    <div class="jumbotron">
+    <div class="jumbotron" id="flightSearch">
 
+        <div class="searchFlexBar">
+            <div class="searchBox">
+                <label><b>Flying from</b></label>
+                <input type="text" placeholder="Enter City" id="dptCity" required>
+            </div>
+
+            <div class="searchBox">
+                <label><b>Flying to</b></label>
+                <input type="text" placeholder="Enter City" id="arrCity" required>
+            </div>
+        </div>
+
+        <div class="searchFlexBar">
+            <div class="searchBox">
+                <label><b>Departing</b></label><br>
+                <input type="date" id="dptDate" required>
+            </div>
+
+            <div class="searchBox">
+                <label><b>Returning</b></label><br>
+                <input type="date" id="arrDate" required>
+            </div>
+        </div>
 
         <button type="button" class="btn btn-primary" id="submitQuery">Search</button>
         <button type="button" class="btn btn-primary" id="clearTable">Clear</button>
