--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -68,6 +68,22 @@
         <table class="table table-striped" id="resTable"></table>
     </div>
 
+    <!-- view seats -->
+    <div id = "Available Seats">
+        <div class = "searchBox">
+            <label><b>Flight Number</b></label>
+            <input type = "number" placeholder= "Enter Flight Number" id = "flightNum" required>
+        </div>
+
+        <button type="button" class="btn btn-primary" id="availSeats">Search</button>
+    </div>
+
+
+
+</div>
+
+
+
 </div>
 
 
