modified Server.ts (helper methods in Server.ts are aggregated into Server.post

--- a/src/rest/views/login.html
+++ b/src/rest/views/login.html
@@ -40,7 +40,8 @@
         event.preventDefault();
         var $form = $('#loginForm'),
             username = $form.find("input[name='uname']").val(),
-            info = {username: username};
+            sql = "select password from passenger where email=" + JSON.stringify(username),
+            info = {query: sql};
         $.ajax({
             type: 'POST',
             url: './login',
