--- a/src/rest/views/login.html
+++ b/src/rest/views/login.html
@@ -71,7 +71,7 @@
         var session = window.sessionStorage;
         if (typeof(session) !== "undefined") {
             session.setItem('email', email);
-            session.setItem('password', password);
+//            session.setItem('password', password);
             session.setItem('isLoggedIn', true);
         }
         else {
