--- a/src/rest/public/stylesheets/login.css
+++ b/src/rest/public/stylesheets/login.css
@@ -6,7 +6,7 @@ form {
 }
 
 /* Full-width inputs */
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=date] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -20,7 +20,7 @@ input[type=text], input[type=password] {
 }
 
 /* Set a style for all buttons */
-button {
+#loginForm button {
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
@@ -31,7 +31,7 @@ button {
 }
 
 /* Add a hover effect for buttons */
-button:hover {
+#loginForm button:hover {
     opacity: 0.8;
 }
 
