--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -75,7 +75,7 @@
     </div>
 
     <!-- view seats -->
-    <div id="AvailableSeats">
+    <div id="availableSeats">
         <div class="searchBox">
             <label><b>Flight Number</b></label>
             <input type="number" placeholder="Enter Flight Number" id="flightNum" required>
