view available seats in ui

--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -62,13 +62,8 @@
     </div>
 
     <!-- view seats -->
-    <div id = "AvailableSeats">
-        <div class = "searchBox">
-            <label><b>Flight Number</b></label>
-            <input type = "number" placeholder= "Enter Flight Number" id = "flightNum" required>
-        </div>
-
-        <button type="button" class="btn btn-primary" id="availSeats">Search</button>
+    <div class="jumbotron" style="display: none" id="viewSeats">
+        <button type="button" class="btn btn-primary" id="selectSeats">Select Seat</button>
     </div>
 
 
