--- a/src/rest/views/profile.html
+++ b/src/rest/views/profile.html
@@ -1,24 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
-    <title>Sign Up</title>
-    <script src="../public/javascripts/jquery-3.2.0.js"></script>
-    <!--<script src="../public/javascripts/signup.js"></script>-->
-    <link rel="stylesheet" href="../public/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" href="../public/stylesheets/style.css">
-    <link rel="stylesheet" href="../public/stylesheets/signup.css">
-</head>
-<body>
 <form action="/" method="POST" id="updateForm">
     <div class="container">
         <p class="updateMsg" id="updateMsg"></p>
         <label><b>Email: </b></label> <br>
-        <text id="email">hyungro@hotmail.com</text>
+        <text id="email"></text>
         <br><br>
         <label><b>Name: </b></label> <br>
-        <text id="name">Ro Lee</text>
+        <text id="name"></text>
         <br><br>
 
         <label><b>Current Password</b></label>
@@ -56,12 +43,14 @@
 </body>
 <script>
     var email = window.sessionStorage.getItem("email");
+    $("#email").text(email);
     var sql = "select * from passenger where email = " + JSON.stringify(email);
     postQuery({query: sql}, fillInProfile);
 
     function fillInProfile(data) {
         var info = data.body.result[0];
         var fields = ["phone", "address", "dateofbirth"];
+        $("#name").text(info["pname"]);
         fields.forEach(function (field) {
             var res = info[field];
             if (res !== null){
@@ -134,4 +123,3 @@
         window.location.href = '/'
     }
 </script>
-</html>
