--- a/src/rest/public/stylesheets/login.css
+++ b/src/rest/public/stylesheets/login.css
@@ -6,10 +6,10 @@ form {
 }
 
 /* Full-width inputs */
-input[type=text], input[type=password], input[type=date] {
+#loginForm input[type=text], input[type=password], input[type=date] {
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
+    padding: 12px 12px;
+    margin: 8px 8px;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
