--- a/src/rest/views/home.html
+++ b/src/rest/views/home.html
@@ -33,7 +33,7 @@
 </div>
 
 <!-- view seats -->
-<div id="AvailableSeats">
+<div class="jumbotron" id="availableSeats">
     <div class="searchBox">
         <label><b>Flight Number</b></label>
         <input type="number" placeholder="Enter Flight Number" id="flightNum" required>
