fixed contentsHandler & implemented flights view for Clerks

--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -6,6 +6,7 @@
     <title>Flight Manager</title>
     <script type="text/javascript" src="../public/javascripts/jquery-3.2.0.js"></script>
     <script type="text/javascript" src="../public/javascripts/index.js"></script>
+    <script type="text/javascript" src="../public/javascripts/flights.js"></script>
     <script type="text/javascript" src="../public/javascripts/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../public/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="../public/stylesheets/style.css">
@@ -70,6 +71,8 @@
             <label><b>Departing</b></label><br>
             <input type="date" id="dptDate" required>
         </div>
+
+
 
         <button type="button" class="btn btn-primary" id="submitQuery">Search</button>
         <button type="button" class="btn btn-primary" id="clearTable">Clear</button>
