--- a/src/rest/views/home.html
+++ b/src/rest/views/home.html
@@ -29,7 +29,7 @@
 
 <!--QUERY RESULT-->
 <div class="resDiv" id="resDiv">
-    <table class="table table-striped" id="resTable"></table>
+    <table class="table table-hover" id="resTable"></table>
 </div>
 
 <!-- view seats -->
