--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="../public/javascripts/jquery-3.2.0.js"></script>
     <script type="text/javascript" src="../public/javascripts/index.js"></script>
     <script type="text/javascript" src="../public/javascripts/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../public/javascripts/reservation.js"></script>
     <link rel="stylesheet" href="../public/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="../public/stylesheets/style.css">
     <link rel="stylesheet" href="../public/stylesheets/index.css">
