--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="../public/javascripts/index.js"></script>
     <script type="text/javascript" src="../public/javascripts/flights.js"></script>
     <script type="text/javascript" src="../public/javascripts/schedule.js"></script>
+    <script type="text/javascript" src="../public/javascripts/employees.js"></script>
     <script type="text/javascript" src="../public/javascripts/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../public/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="../public/stylesheets/style.css">
