--- a/src/rest/views/reservation.html
+++ b/src/rest/views/reservation.html
@@ -1,43 +1,17 @@
 
 <div class = "jumbotron" id="reservationSearch">
+
+    <h4>My Reservations</h4>
+    <hr>
 <div class="resDiv" id="resDiv">
     <table class="table table-hover" id="seatTable"></table>
 
 </div>
-    <button type="button" id="totalCost">Total Cost</button>
+    <button type="button" class = "btn btn-success btn-xs" id="totalCost">Total Cost : Click to Update</button>
     <p id="demo"></p>
 </div>
 <script src="../public/javascripts/reservation.js">
 
-//    function getReservation(email){
-//        return "select r.confNum as ConfirmationID, rf.flightNum as Flight, s.seatNum as Seat, b.tag as BaggageTag, f.dptDate as Date" +
-//            " from Reservation r, Seat s, ReserveFlight rf, Baggage b, Flight f" +
-//            " where r.email = '"+email+ "' and r.confNum = rf.confNum and s.confNum = r.confNum and b.confNum = r.confNum and rf.flightNum = f.flightNum";
-//    }
-
-//    function deleteOriginalSeat(confNum){
-//        return "update reservation, seat" +
-//            " set seat.confNum = null and seat.isAvailable = 1 and confNum = null" +
-//            " where reservation.confNum = seat.confNum and reservation.confNum = "+ confNum +"";
-//    }
-//
-//    function updateNewSeat(confNum, seatNum){
-//        return "update reservation, seat, seattype" +
-//            " set reservation.cost = seattype.cost and seat.isAvailable = 0 and seat.confNum = "+confNum+"" +
-//            " where seat.type = seattype.seattype and seat.seatNum = "+seatNum+"";
-//    }
-
-
-
-//    var session = window.sessionStorage,
-//        isLoggedIn = JSON.parse(session.getItem('isLoggedIn'));
-//
-//    var email = session.getItem('email');
-//
-//    var sql = getReservation(email);
-//
-//    var sql2 = getAvailableSeatsSQL(flightNum);
-//    postQuery({query:sql}, contentsHandler);
 
     var isLoggedIn = JSON.parse(window.sessionStorage.getItem('isLoggedIn')),
         isPassenger = window.sessionStorage.getItem('usertype') === "passenger";
