--- a/src/rest/public/stylesheets/index.css
+++ b/src/rest/public/stylesheets/index.css
@@ -11,6 +11,11 @@
     cursor: pointer;
 }
 
+#rs-cost {
+    font-weight: bold;
+    text-decoration: underline;
+    font-size: large;
+}
 
 /* Full-width input fields */
 input[type=text], input[type=date] {
