--- a/src/rest/views/home.html
+++ b/src/rest/views/home.html
@@ -35,7 +35,7 @@
 <!-- MEDICAL OPTION -->
 <div class="jumbotron" style="display: none" id="medProtection">
     <label><b>Would you like to add medical protection to your trip?</b></label><br>
-    <input type="checkbox" onclick="addMedProtection()"> only $39.99 <small>per person</small>
+    <input type="checkbox" onclick="addMedProtection()"> only $50 <small>per person</small>
 </div>
 
 <!-- BAGGAGE OPTION -->
@@ -75,7 +75,7 @@
             <td id="rs-seatNum"></td>
         </tr>
         <tr>
-            <th>Carryon luggage</th>
+            <th>Carry-on luggage</th>
             <td id="rs-carryon"></td>
         </tr>
         <tr>
@@ -88,10 +88,11 @@
         </tr>
         <tr>
             <th>Total Cost</th>
-            <td id="rs-cost"><b><u>0</u></b></td>
+            <td id="rs-cost"><b><</b></td>
         </tr>
     </table>
 
+    <button type="button" class="btn btn-primary" id="usePoint">Use Mileage Point</button>
     <button type="button" class="btn btn-primary" id="makeReservation">Complete Booking</button>
     <button type="button" class="btn btn-primary" id="cancelReservation">Cancel</button>
 </div>
