fixed employee.js and schedule.js

--- a/src/rest/views/schedule.html
+++ b/src/rest/views/schedule.html
@@ -26,8 +26,8 @@
     </div>
 
     <!--QUERY RESULT-->
-    <div class="resDiv" id="resDiv">
-        <table class="table table-striped" id="resTable"></table>
+    <div class="resDiv" id="eschedule">
+        <table class="table table-striped" id="sTable"></table>
     </div>
 
     <!-- view other crews -->
