--- a/src/rest/views/home.html
+++ b/src/rest/views/home.html
@@ -92,8 +92,9 @@
         </tr>
     </table>
 
+    <label id="notMemberError" style="display: none">You are not a mileage member!</label>
+    <label id="applyPointSuccess" style="display: none"></label>
     <button type="button" class="btn btn-primary" id="usePoint">Use Mileage Point</button>
     <button type="button" class="btn btn-primary" id="makeReservation">Complete Booking</button>
     <button type="button" class="btn btn-primary" id="cancelReservation">Cancel</button>
 </div>
-
