--- a/src/rest/views/home.html
+++ b/src/rest/views/home.html
@@ -92,9 +92,8 @@
         </tr>
     </table>
 
-    <label id="notMemberError" style="display: none">You are not a mileage member!</label>
-    <label id="applyPointSuccess" style="display: none"></label>
-    <button type="button" class="btn btn-primary" id="usePoint">Use Mileage Point</button>
+
+    <input type="checkbox" id="usePoint" style="display: none" onclick="updateTotalCost()"><span id="pointText"></span>
     <button type="button" class="btn btn-primary" id="makeReservation">Complete Booking</button>
     <button type="button" class="btn btn-primary" id="cancelReservation">Cancel</button>
 </div>
