--- a/src/rest/views/home.html
+++ b/src/rest/views/home.html
@@ -94,6 +94,6 @@
 
 
     <input type="checkbox" id="usePoint" style="display: none" onclick="updateTotalCost()"><span id="pointText"></span>
-    <button type="button" class="btn btn-primary" id="makeReservation">Complete Booking</button>
+    <button type="button" class="btn btn-primary" id="completeReservation">Complete Booking</button>
     <button type="button" class="btn btn-primary" id="cancelReservation">Cancel</button>
 </div>
