flight detail added, update gate finished, working on employee assignment

--- a/src/rest/views/flights.html
+++ b/src/rest/views/flights.html
@@ -30,7 +30,7 @@
     </div>
 
     <button type="button" class="btn btn-primary" id="submit-flight-search">Search</button>
-    <button type="button" class="btn btn-primary" id="clearTable">Clear</button>
+    <button type="button" class="btn btn-primary" id="clearTable" onclick="clearFlights()">Clear</button>
 
 </div>
 
