--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="../public/javascripts/employees.js"></script>
     <script type="text/javascript" src="../public/javascripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="../public/javascripts/reservation.js"></script>
+    <script type="text/javascript" src="../public/javascripts/flight_detail.js"></script>
     <link rel="stylesheet" href="../public/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" href="../public/stylesheets/style.css">
     <link rel="stylesheet" href="../public/stylesheets/index.css">
@@ -36,7 +37,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Dropdown <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li class="common-menu" id="updateProfile"><a onclick="loadBlockContent('./profile')">Update
+                        <li class="passenger-menu" id="updateProfile"><a onclick="loadBlockContent('./profile')">Update
                             Profile</a></li>
                         <li class="passenger-menu" id="check-reservation"><a
                                 onclick="loadBlockContent('./reservation')">My Reservations</a></li>
