--- a/src/rest/views/profile.html
+++ b/src/rest/views/profile.html
@@ -40,11 +40,11 @@
     </div>
 </form>
 
-</body>
 <script>
-    var email = window.sessionStorage.getItem("email");
+    var email = window.sessionStorage.getItem("email"),
+        usertype = window.sessionStorage.getItem("usertype"),
+        sql = "select * from " + usertype + " where email = " + JSON.stringify(email);
     $("#email").text(email);
-    var sql = "select * from passenger where email = " + JSON.stringify(email);
     postQuery({query: sql}, fillInProfile);
 
     function fillInProfile(data) {
