--- a/src/rest/views/signup.html
+++ b/src/rest/views/signup.html
@@ -85,6 +85,7 @@
 
         window.sessionStorage.setItem("email", $form.find("input[name='email']").val());
         window.sessionStorage.setItem("isLoggedIn", true);
+        window.sessionStorage.setItem("usertype", "passenger");
         window.location.href='/'
     }
 </script>
